--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.PNG">
 
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Website to help you build a great online presence for your app which will convert visitors into users">
+  <meta name="description" content="A platform for honest conversations.">
   <meta name="author" content="ZeitLabs">
 
   <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
