--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
    <script src="assets/js/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
    <!-- <script src="assets/js/swiper.min.js"></script>  -->
    <script src="assets/js/jquery.magnific-popup.js"></script> 
-   <script src="assets/js/morphext.min.js"></script> 
+   <!-- <script src="assets/js/morphext.min.js"></script>  -->
    <script src="assets/js/validator.min.js"></script> 
    <script src="assets/js/scripts.js"></script> <!-- Custom scripts -->
 </body>
