--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <title>Vaartaalaap</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.PNG">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
+  
 
   <!-- SEO Meta Tags -->
   <meta name="description" content="A platform for honest conversations.">
